# viscom_framework

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  RDSettings.cap  README.md  colors_from_image_example.txt  framework.cfg  framework_ide.cfg  framework_ide_local_slave.cfg
data/localms/: localms.xml
data/single/: single.xml
data/twowindows/: twowindows.xml
doc/: VisualizationLabFramework.md.html
resources/models/robot2/: robot2.fbx
resources/shader/: demoCircles.frag  demoCircles.vert  foregroundAnimatedMesh.vert  mousePoint.frag  mousePoint.vert  showColor.frag  showTexture.frag
src/: main.cpp  main.h
src/app/: ApplicationNodeImplementation.cpp  ApplicationNodeImplementation.h  CoordinatorNode.cpp  CoordinatorNode.h  MasterNode.cpp  MasterNode.h  SlaveNode.cpp  Vertices.h  WorkerNode.cpp  WorkerNode.h
src/core/: TuioInputWrapper.cpp  TuioInputWrapper.h
